--- a/style.css
+++ b/style.css
@@ -17,6 +17,23 @@ a{
   background-image: url("image/landing-page-background.jpg");
   background-size: cover;
   border-radius: 0 0 160px 160px ;
+  position: relative;
+  overflow: hidden;
+}
+
+.landing-page::after {
+  content: '';
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
+  background-color: rgba(0, 0,0, .5);
+  z-index: 0;
+}
+.landing-page > * {
+  position: relative;
+  z-index: 1;
 }
 .landing-page header {
   width: 100%;
@@ -27,6 +44,7 @@ a{
 }
 .landing-page nav ul{
   display: flex;
+  flex-flow: row wrap;
   list-style-type: none;
 }
 .landing-page nav ul li {
@@ -35,7 +53,7 @@ a{
   font-weight: 300;
 }
 .landing-page a {
-  color: #d2d2d2;
+  color: #dfdbdb;
  }
 
 .header-link-group a {
@@ -68,7 +86,6 @@ a{
   color: white;
     font-family: 'Roboto',sans-serif;
     font-weight: 300;
-    /* font-size: 16px; */
     text-align: center;
     padding: 0 10px;
     margin: 1rem 0;
@@ -87,17 +104,20 @@ a{
 }
 .feature-items-container {
   width: 87%;
+  z-index: 1;
+  position: relative;
   display: flex;
   margin: -80px auto 0;
   flex-flow: row wrap;
   justify-content: space-between;
-  align-items: center;
+  align-items: stretch;
 }
  .feature-item {
   width: 23%;
   min-width: 200px;
   border-radius: 20px;
   background-color: #ffffff;
+  margin: .5rem;
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
@@ -106,7 +126,7 @@ a{
 .feature-item h4 {
   font-size: 16px;
     font-weight: 600;
-    margin: .6rem 0;
+    margin: 1rem 0 .7rem;
     font-family: 'Roboto',sans-serif;
 }
 
@@ -115,7 +135,7 @@ a{
   object-fit: contain;
 }
 .feature-item p {
-  width: 90%;
+  width: 92%;
   font-family: 'Roboto';
   font-size: 14px;
   line-height: 1.6;
