--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ a {
   z-index: 1;
   position: relative;
   display: flex;
-  margin: -80px auto 0;
+  margin: -101px auto 0;
   flex-flow: row wrap;
   justify-content: space-between;
   align-items: stretch;
@@ -133,7 +133,7 @@ a {
 }
 
 .feature-item img {
-  width: 75px;
+  width: 70px;
   object-fit: contain;
 }
 .feature-item p {
@@ -148,13 +148,13 @@ a {
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  margin: 5rem auto 4rem;
+  margin: 5rem auto 3.5rem;
 }
 .destinations-title h2 {
   font-family: "Archivo", sans-serif;
   font-weight: 900;
-  max-width: 370px;
-  font-size: 2.2em;
+  max-width: 430px;
+  font-size: 1.85em;
   margin-top: 1.2rem;
   text-align: center;
   color: #3b3735;
@@ -165,9 +165,10 @@ a {
 .destinations-container {
   width: 87%;
   display: flex;
+  flex-flow: row wrap;
   justify-content: space-between;
   align-items: stretch;
-  margin: 0 auto;
+  margin: 1rem auto;
 }
 section.destination {
   padding: 1.4rem;
@@ -182,30 +183,36 @@ section.destination {
 .destination h3 {
   font-family: "Archivo", sans-serif;
   font-weight: 900;
+  text-align: center;
+  line-height: 1.3;
   font-size: 17px;
   margin: 0.73rem 0;
 }
 .destination p {
   font-size: 14px;
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 300;
   text-align: center;
   margin-bottom: 1.3rem;
 }
 .destination img {
-  max-width: 100%;
+  width: 100%;
   object-fit: cover;
   height: 100%;
 }
 .destination .readMore-btn {
-  background-color: rgb(48, 48, 48,0.13);
+  background-color: rgb(48, 48, 48, 0.13);
   border: 0;
-  color: #8D8D8D;
+  color: #8d8d8d;
   border-radius: 20px;
   font-size: 14px;
   padding: 10px 26px;
-  margin: .3rem 0;
-  font-family: 'Roboto',sans-serif;
+  cursor: pointer;
+  margin: 0.3rem 0;
+  font-family: "Roboto", sans-serif;
+}
+.readMore-btn:hover {
+  color: black;
 }
 span.destination-price {
   background-color: white;
@@ -227,4 +234,22 @@ span.destination-price {
   right: 12px;
   background-color: white;
   border-radius: 14px;
+}
+.viewAll-btn {
+  color: #e76f51;
+  border: #e76f51 solid 1px;
+  border-radius: 20px;
+  padding: 9px 45px;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  background: none;
+  margin: 2rem auto;
+  display: block;
+  cursor: pointer;
+  transition: all .3s linear .05s;
+}
+.viewAll-btn:hover {
+  background-color: #e76f51;
+  color: white;
 }
