--- a/style.css
+++ b/style.css
@@ -24,8 +24,7 @@ a {
   flex-flow: row wrap;
 }
 
-.landing-page::after ,
-.landing-page[data-clickable="true"] {
+.landing-page::after  {
   content: "";
   top: 0;
   bottom: 0;
@@ -35,9 +34,7 @@ a {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-.landing-page[data-clickable="true"] {
-  z-index: 3;
-}
+
 .landing-page > * {
   position: relative;
   z-index: 1;
