--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ body {
 a {
   text-decoration: none;
 }
+header a:hover ,
+footer a:hover {
+  color: #e76f51;
+}
 .landing-page {
   width: 100%;
   height: 100vh;
@@ -105,6 +109,9 @@ a {
   border: 1px solid #d2d2d2;
   padding: 8px 18px;
   border-radius: 24px;
+}
+.header-link-group a:last-child:hover {
+  border-color: #e76f51;
 }
 
 .hamburger-btn {
@@ -203,6 +210,9 @@ a {
   align-items: center;
   color: #3b3735;
   padding: 2.3rem 0.5rem 1.8rem;
+}
+.destination {
+  border: 2px solid transparent;
 }
 .feature-item h4 {
   font-size: 16px;
